--- a/tes.html
+++ b/tes.html
@@ -546,8 +546,16 @@ body {
         margin-bottom: 10px;
       }
 
-      #search-bar, #items-per-page {
-        width: 60px;
+      #search-bar {
+        width: 30px;
+        max-width: none;
+        margin-bottom: 10px;
+        border-radius: 5px; 
+      }
+
+
+      #items-per-page {
+        width: 30px;
         max-width: none;
         margin-bottom: 10px;
         border-radius: 5px; 
