--- a/tes.html
+++ b/tes.html
@@ -528,7 +528,7 @@ body {
 
     
         #search-bar {
-      padding: 13px;
+      padding: 15px;
       width: 100px;
       max-width: 100px;
       border: 2px solid #4CAF50;
@@ -819,7 +819,8 @@ body {
 
         <center><button class="button7" onclick="showPopup('sub-link')">SHOW LINK SUB</button></center>
 <div class="filters">
-      <div><button class="button7" onclick="showPopup('menu')">MENU</button></div><div>
+      <div><button class="button7" onclick="showPopup('menu')" style="font-size: 20px;">MENU</button>
+</div><div>
 <span class="filter-label">Page:</span>
 <select class="service-selector" id="items-per-page">
   <option value="10">10</option>
