--- a/tes.html
+++ b/tes.html
@@ -528,7 +528,7 @@ body {
 
     
         #search-bar {
-      padding: 15px;
+      padding: 13px;
       width: 100px;
       max-width: 100px;
       border: 2px solid #4CAF50;
@@ -821,7 +821,7 @@ body {
 <div class="filters">
       <div><button class="button7" onclick="showPopup('menu')" style="font-size: 18px;">MENU</button>
 </div><div>
-<span class="filter-label">Page:</span>
+<span class="filter-label">Item Page:</span>
 <select class="service-selector" id="items-per-page">
   <option value="10">10</option>
   <option value="25">25</option>
