--- a/tes.html
+++ b/tes.html
@@ -819,9 +819,11 @@ body {
 
         <center><button class="button7" onclick="showPopup('sub-link')">SHOW LINK SUB</button></center>
 <div class="filters">
-      <div><button class="button7" onclick="showPopup('menu')" style="font-size: 18px;">MENU</button>
+      <div><button class="button7" onclick="showPopup('menu')">
+        <img src="https://cf.cepu.us.kg/menu-button.png" alt="menu" width="20">
+</button>
 </div><div>
-<span class="filter-label">Item Page:</span>
+<span class="filter-label">Page:</span>
 <select class="service-selector" id="items-per-page">
   <option value="10">10</option>
   <option value="25">25</option>
